# DuskEditor

./: .gitignore  CMakeLists.txt  DuskEditor.resource.xml  DuskEditorAppWindow.ui  LICENSE
src/: App.cpp  App.hpp  Main.cpp  Window.cpp  Window.hpp
src/glad/: glad.c  glad.h
